hphp/hack/test/typecheck/attributes/super_nested_attribute.php.exp
File "super_nested_attribute.php", line 7, characters 34-53:
Attribute arguments must be literals (Parsing[1002])
